k8s/landing/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
  namespace: landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      labels:
        app: landing
    spec:
      tolerations:
        - key: nodetype
          operator: Equal
          value: user
          effect: NoSchedule
      nodeSelector:
        role: user-worker
      containers:
        - name: landing
          image: wooyeol43/landing:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: landing
  namespace: landing
spec:
  selector:
    app: landing
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
