k8s/landing/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-ingress
  namespace: landing
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  number: 80
